characters/empy3.css
body {
  background-image: url("/data/images/backgrounds/empybg.png");
  background-size: cover;
}

.sidenav a:hover {color:#fff; background-color:#282828;}
.sidenav a:active {color:#3664b6;}
.sidenav>hr {border-style:dotted; border-width:1px 0 0 0; margin:8px 0 8px 0;}
a {cursor:crosshair; border: 1px solid transparent; margin: 0px;}
a:link {color:#3664b6;}
a:visited {color:#3664b6;}
a:hover {color:#181818;	border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat; background-color:e6e6e6;}
a:active {color:#fff;}


#ddr-arrowz{
animation-name: throb;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
float: center;
display: block;
align-items: center;
align-self: center;
justify-content: center;
margin: auto;
position:relative;
image-rendering: pixelated;
vertical-align: bottom;
}   

@keyframes throb {
	0%   {transform: scale(1);}
	50%  {transform: scale(0.95);}
	100% {transform: scale(1);}
	}


#modular{
  border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
  animation: hoverhand 3s ease-in-out infinite;
float: left;
display: block;
align-items: left;
align-self: left;
justify-content: left;
margin-left: 15px;
position:relative;
image-rendering: pixelated;
vertical-align: bottom;
width: 300px;
height: 400px;
}   

@keyframes spin {
	0%   {transform: rotate(0deg);}
	100% {transform: rotate(360deg);}
	}

#smiley{

animation-name: spin;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
float: left;
display: block;
align-items: left;
align-self: left;
justify-content: left;
margin-top: 500px;
margin-left: 18px;
position:relative;
image-rendering: pixelated;
vertical-align: bottom;
width: 150px;
height: 150px;
}   

.empytext1{
font-family: "dd";
font-size: 150px;
color: #fff;
}   

.empytext2{
font-family: "fp";
font-size: 150px;
color: #fff;
}   

#empytext{
text-align: center;
justify-content: center;
float: center;
align-items: center;
position:relative;
}   

.containempy{
position: relative;
background-image: url("/data/images/backgrounds/polkabg.gif");
border: 1px solid transparent; border-image: url("/data/images/random/ants.gif") 1 repeat;
width: 900px;
height: 100vh;
align-items: center;
display: block;
justify-content: center;
text-align: center;
float: top;
align-self: center;
text-align: center;
margin: auto;
}


@font-face {
  font-family: "dd";
  src: url("/data/font/DigitalDisorder.ttf");
}

@font-face {
  font-family: "fp";
  src: url("/data/font/full Pack 2025.ttf");
}

@keyframes hoverhand {
	0% {transform:translate(0px, 4px);}
	50% {transform:translate(0px, -4px);}
	100% {transform:translate(0px, 4px);}
}

